correct travis.yml file script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: python 
+language: python
 python:
   - '3.6'
 services:
@@ -6,4 +6,4 @@ services:
 before_script: pip install docker-compose
 
 script:
-  - docker-compose run app sh -c 'pytohn manage.py test && flake8'
+  - docker-compose run app sh -c 'python manage.py test && flake8'
